removed grid because of spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,6 @@ p {
 	color: #ffffff;
 }
 
-/* Grid Container */
-.container {
-	display: grid;
-	grid-template-rows: repeat(10, 1fr);
-}
-
 #close {
 	color: white;
 	font-size: 2em;
@@ -259,7 +253,7 @@ p {
 	}
 
 	#close {
-		display: block;
+		display: inline;
 	}
 }
 
